--- a/templates/alelemconsumo_consulta_print.htm
+++ b/templates/alelemconsumo_consulta_print.htm
@@ -106,7 +106,7 @@
 	 
 		{BEGIN ec_codelem_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field" {$item_simple_grid_field} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ec_codelem" data-fieldname="ec_codelem" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field10" {$item_simple_grid_field10} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ec_codelem" data-fieldname="ec_codelem" 
 
 	
 	
@@ -136,7 +136,7 @@
 	 
 		{BEGIN ec_nomelemento_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ec_nomelemento" data-fieldname="ec_nomelemento" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field11" {$item_simple_grid_field11} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ec_nomelemento" data-fieldname="ec_nomelemento" 
 
 	
 	
@@ -166,7 +166,7 @@
 	 
 		{BEGIN eccuenta_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field8" {$item_simple_grid_field8} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="eccuenta" data-fieldname="eccuenta" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field12" {$item_simple_grid_field12} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="eccuenta" data-fieldname="eccuenta" 
 
 	
 	
@@ -196,7 +196,7 @@
 	 
 		{BEGIN ecunidad_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field9" {$item_simple_grid_field9} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ecunidad" data-fieldname="ecunidad" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field13" {$item_simple_grid_field13} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ecunidad" data-fieldname="ecunidad" 
 
 	
 	
@@ -210,6 +210,186 @@
 	
 	</th>
 	{END cellblock_grid_headcell_field3}
+									{BEGIN cellblock_grid_headcell_field4}
+	<th
+	
+	{$cell_grid_headcell_field4}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonew_class}	"
+
+			data-field="nicsp_cuentacostonew"
+	
+	data-cellId="grid_headcell_field4" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostonew_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostonew" data-fieldname="nicsp_cuentacostonew" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label alelemconsumo_consulta nicsp_cuentacostonew }</span>
+			</span>
+	</span>
+{END nicsp_cuentacostonew_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field4}
+									{BEGIN cellblock_grid_headcell_field5}
+	<th
+	
+	{$cell_grid_headcell_field5}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonewc_class}	"
+
+			data-field="nicsp_cuentacostonewc"
+	
+	data-cellId="grid_headcell_field5" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostonewc_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field15" {$item_simple_grid_field15} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostonewc" data-fieldname="nicsp_cuentacostonewc" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label alelemconsumo_consulta nicsp_cuentacostonewc }</span>
+			</span>
+	</span>
+{END nicsp_cuentacostonewc_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field5}
+									{BEGIN cellblock_grid_headcell_field6}
+	<th
+	
+	{$cell_grid_headcell_field6}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonewn_class}	"
+
+			data-field="nicsp_cuentacostonewn"
+	
+	data-cellId="grid_headcell_field6" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostonewn_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field16" {$item_simple_grid_field16} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostonewn" data-fieldname="nicsp_cuentacostonewn" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label alelemconsumo_consulta nicsp_cuentacostonewn }</span>
+			</span>
+	</span>
+{END nicsp_cuentacostonewn_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field6}
+									{BEGIN cellblock_grid_headcell_field7}
+	<th
+	
+	{$cell_grid_headcell_field7}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicio_class}	"
+
+			data-field="nicsp_cuentacostoservicio"
+	
+	data-cellId="grid_headcell_field7" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostoservicio_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostoservicio" data-fieldname="nicsp_cuentacostoservicio" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label alelemconsumo_consulta nicsp_cuentacostoservicio }</span>
+			</span>
+	</span>
+{END nicsp_cuentacostoservicio_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field7}
+									{BEGIN cellblock_grid_headcell_field8}
+	<th
+	
+	{$cell_grid_headcell_field8}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicioc_class}	"
+
+			data-field="nicsp_cuentacostoservicioc"
+	
+	data-cellId="grid_headcell_field8" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostoservicioc_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field18" {$item_simple_grid_field18} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostoservicioc" data-fieldname="nicsp_cuentacostoservicioc" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label alelemconsumo_consulta nicsp_cuentacostoservicioc }</span>
+			</span>
+	</span>
+{END nicsp_cuentacostoservicioc_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field8}
+									{BEGIN cellblock_grid_headcell_field9}
+	<th
+	
+	{$cell_grid_headcell_field9}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicion_class}	"
+
+			data-field="nicsp_cuentacostoservicion"
+	
+	data-cellId="grid_headcell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostoservicion_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field19" {$item_simple_grid_field19} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostoservicion" data-fieldname="nicsp_cuentacostoservicion" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label alelemconsumo_consulta nicsp_cuentacostoservicion }</span>
+			</span>
+	</span>
+{END nicsp_cuentacostoservicion_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field9}
 							</tr>
 															
 					{END grid_header}
@@ -305,6 +485,132 @@
 {END ecunidad_fieldcolumn}	
 	</td>
 	{END cellblock_grid_cell_field3}
+									{BEGIN cellblock_grid_cell_field4}
+	<td
+	
+	{$cell_grid_cell_field4}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonew_class}	"
+
+			data-field="nicsp_cuentacostonew"
+	
+	data-cellId="grid_cell_field4" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostonew_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field" {$item_simple_grid_field} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostonew" data-fieldname="nicsp_cuentacostonew" data-default-width >
+{$nicsp_cuentacostonew_value}
+</span>
+{END nicsp_cuentacostonew_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field4}
+									{BEGIN cellblock_grid_cell_field5}
+	<td
+	
+	{$cell_grid_cell_field5}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonewc_class}	"
+
+			data-field="nicsp_cuentacostonewc"
+	
+	data-cellId="grid_cell_field5" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostonewc_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field2" {$item_simple_grid_field2} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostonewc" data-fieldname="nicsp_cuentacostonewc" data-default-width >
+{$nicsp_cuentacostonewc_value}
+</span>
+{END nicsp_cuentacostonewc_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field5}
+									{BEGIN cellblock_grid_cell_field6}
+	<td
+	
+	{$cell_grid_cell_field6}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonewn_class}	"
+
+			data-field="nicsp_cuentacostonewn"
+	
+	data-cellId="grid_cell_field6" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostonewn_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field3" {$item_simple_grid_field3} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostonewn" data-fieldname="nicsp_cuentacostonewn" data-default-width >
+{$nicsp_cuentacostonewn_value}
+</span>
+{END nicsp_cuentacostonewn_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field6}
+									{BEGIN cellblock_grid_cell_field7}
+	<td
+	
+	{$cell_grid_cell_field7}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicio_class}	"
+
+			data-field="nicsp_cuentacostoservicio"
+	
+	data-cellId="grid_cell_field7" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostoservicio_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostoservicio" data-fieldname="nicsp_cuentacostoservicio" data-default-width >
+{$nicsp_cuentacostoservicio_value}
+</span>
+{END nicsp_cuentacostoservicio_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field7}
+									{BEGIN cellblock_grid_cell_field8}
+	<td
+	
+	{$cell_grid_cell_field8}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicioc_class}	"
+
+			data-field="nicsp_cuentacostoservicioc"
+	
+	data-cellId="grid_cell_field8" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostoservicioc_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field8" {$item_simple_grid_field8} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostoservicioc" data-fieldname="nicsp_cuentacostoservicioc" data-default-width >
+{$nicsp_cuentacostoservicioc_value}
+</span>
+{END nicsp_cuentacostoservicioc_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field8}
+									{BEGIN cellblock_grid_cell_field9}
+	<td
+	
+	{$cell_grid_cell_field9}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicion_class}	"
+
+			data-field="nicsp_cuentacostoservicion"
+	
+	data-cellId="grid_cell_field9" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN nicsp_cuentacostoservicion_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field9" {$item_simple_grid_field9} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="nicsp_cuentacostoservicion" data-fieldname="nicsp_cuentacostoservicion" data-default-width >
+{$nicsp_cuentacostoservicion_value}
+</span>
+{END nicsp_cuentacostoservicion_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field9}
 							</tr>
 										
 											</tbody>
@@ -376,6 +682,96 @@
 	
 	</td>
 	{END cellblock_grid_footcell_field3}
+									{BEGIN cellblock_grid_footcell_field4}
+	<td
+	
+	{$cell_grid_footcell_field4}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonew_class}	"
+
+	
+	data-cellId="grid_footcell_field4" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="alelemconsumo_consulta_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field4}
+									{BEGIN cellblock_grid_footcell_field5}
+	<td
+	
+	{$cell_grid_footcell_field5}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonewc_class}	"
+
+	
+	data-cellId="grid_footcell_field5" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="alelemconsumo_consulta_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field5}
+									{BEGIN cellblock_grid_footcell_field6}
+	<td
+	
+	{$cell_grid_footcell_field6}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostonewn_class}	"
+
+	
+	data-cellId="grid_footcell_field6" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="alelemconsumo_consulta_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field6}
+									{BEGIN cellblock_grid_footcell_field7}
+	<td
+	
+	{$cell_grid_footcell_field7}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicio_class}	"
+
+	
+	data-cellId="grid_footcell_field7" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="alelemconsumo_consulta_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field7}
+									{BEGIN cellblock_grid_footcell_field8}
+	<td
+	
+	{$cell_grid_footcell_field8}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicioc_class}	"
+
+	
+	data-cellId="grid_footcell_field8" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="alelemconsumo_consulta_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field8}
+									{BEGIN cellblock_grid_footcell_field9}
+	<td
+	
+	{$cell_grid_footcell_field9}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$nicsp_cuentacostoservicion_class}	"
+
+	
+	data-cellId="grid_footcell_field9" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="alelemconsumo_consulta_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field9}
 							</tr>
 					
 					</tfoot>
