--- a/templates/alelemconsumo_consulta_search.htm
+++ b/templates/alelemconsumo_consulta_search.htm
@@ -203,6 +203,138 @@
 </div>
 
 {END ecunidad_fieldblock}
+											
+{BEGIN nicsp_cuentacostonew_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostonew}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="nicsp_cuentacostonew{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field2" {$item_integrated_search_field2} data-pageid="{$pageid}" data-field="nicsp_cuentacostonew" data-fieldname="nicsp_cuentacostonew" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_nicsp_cuentacostonew}">
+		{$label alelemconsumo_consulta nicsp_cuentacostonew }	</label>
+	<div class="r-search-option">
+		{$searchtype_nicsp_cuentacostonew}
+	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostonew_editcontrol}	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostonew_editcontrol1}
+	</div>
+	
+</div>
+
+{END nicsp_cuentacostonew_fieldblock}
+											
+{BEGIN nicsp_cuentacostonewc_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostonewc}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="nicsp_cuentacostonewc{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field3" {$item_integrated_search_field3} data-pageid="{$pageid}" data-field="nicsp_cuentacostonewc" data-fieldname="nicsp_cuentacostonewc" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_nicsp_cuentacostonewc}">
+		{$label alelemconsumo_consulta nicsp_cuentacostonewc }	</label>
+	<div class="r-search-option">
+		{$searchtype_nicsp_cuentacostonewc}
+	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostonewc_editcontrol}	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostonewc_editcontrol1}
+	</div>
+	
+</div>
+
+{END nicsp_cuentacostonewc_fieldblock}
+											
+{BEGIN nicsp_cuentacostonewn_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostonewn}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="nicsp_cuentacostonewn{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field6" {$item_integrated_search_field6} data-pageid="{$pageid}" data-field="nicsp_cuentacostonewn" data-fieldname="nicsp_cuentacostonewn" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_nicsp_cuentacostonewn}">
+		{$label alelemconsumo_consulta nicsp_cuentacostonewn }	</label>
+	<div class="r-search-option">
+		{$searchtype_nicsp_cuentacostonewn}
+	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostonewn_editcontrol}	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostonewn_editcontrol1}
+	</div>
+	
+</div>
+
+{END nicsp_cuentacostonewn_fieldblock}
+											
+{BEGIN nicsp_cuentacostoservicio_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostoservicio}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="nicsp_cuentacostoservicio{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field8" {$item_integrated_search_field8} data-pageid="{$pageid}" data-field="nicsp_cuentacostoservicio" data-fieldname="nicsp_cuentacostoservicio" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_nicsp_cuentacostoservicio}">
+		{$label alelemconsumo_consulta nicsp_cuentacostoservicio }	</label>
+	<div class="r-search-option">
+		{$searchtype_nicsp_cuentacostoservicio}
+	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostoservicio_editcontrol}	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostoservicio_editcontrol1}
+	</div>
+	
+</div>
+
+{END nicsp_cuentacostoservicio_fieldblock}
+											
+{BEGIN nicsp_cuentacostoservicioc_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostoservicioc}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="nicsp_cuentacostoservicioc{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field9" {$item_integrated_search_field9} data-pageid="{$pageid}" data-field="nicsp_cuentacostoservicioc" data-fieldname="nicsp_cuentacostoservicioc" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_nicsp_cuentacostoservicioc}">
+		{$label alelemconsumo_consulta nicsp_cuentacostoservicioc }	</label>
+	<div class="r-search-option">
+		{$searchtype_nicsp_cuentacostoservicioc}
+	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostoservicioc_editcontrol}	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostoservicioc_editcontrol1}
+	</div>
+	
+</div>
+
+{END nicsp_cuentacostoservicioc_fieldblock}
+											
+{BEGIN nicsp_cuentacostoservicion_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostoservicion}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="nicsp_cuentacostoservicion{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field10" {$item_integrated_search_field10} data-pageid="{$pageid}" data-field="nicsp_cuentacostoservicion" data-fieldname="nicsp_cuentacostoservicion" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_nicsp_cuentacostoservicion}">
+		{$label alelemconsumo_consulta nicsp_cuentacostoservicion }	</label>
+	<div class="r-search-option">
+		{$searchtype_nicsp_cuentacostoservicion}
+	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostoservicion_editcontrol}	</div>
+	<div class="r-search-field">
+		{$nicsp_cuentacostoservicion_editcontrol1}
+	</div>
+	
+</div>
+
+{END nicsp_cuentacostoservicion_fieldblock}
 	
 								</td>
 			{END cellblock_grid_c3}
