--- a/styles/pages/alelemconsumo_consulta_list.css
+++ b/styles/pages/alelemconsumo_consulta_list.css
@@ -10,6 +10,12 @@
 [data-cellid="grid_footcell_field3"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_footcell_field3"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_footcell_field3"][data-page="alelemconsumo_consulta_list"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field4"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_footcell_field4"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_footcell_field4"][data-page="alelemconsumo_consulta_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field5"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_footcell_field5"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_footcell_field5"][data-page="alelemconsumo_consulta_list"] {
+  white-space: nowrap;
+}
 [data-cellid="grid_headcell_checkbox"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_headcell_checkbox"][data-page="alelemconsumo_consulta_list"][data-cellid="grid_headcell_checkbox"][data-page="alelemconsumo_consulta_list"] {
   width: 30px;
 }
