--- a/styles/pages/alelemconsumo_consulta_print.css
+++ b/styles/pages/alelemconsumo_consulta_print.css
@@ -10,6 +10,24 @@
 [data-cellid="grid_footcell_field3"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field3"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field3"][data-page="alelemconsumo_consulta_print"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field4"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field4"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field4"][data-page="alelemconsumo_consulta_print"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field5"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field5"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field5"][data-page="alelemconsumo_consulta_print"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field6"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field6"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field6"][data-page="alelemconsumo_consulta_print"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field7"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field7"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field7"][data-page="alelemconsumo_consulta_print"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field8"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field8"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field8"][data-page="alelemconsumo_consulta_print"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field9"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field9"][data-page="alelemconsumo_consulta_print"][data-cellid="grid_footcell_field9"][data-page="alelemconsumo_consulta_print"] {
+  white-space: nowrap;
+}
 [data-page="alelemconsumo_consulta_print"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
 }
