--- a/templates/alelemconsumo_consulta_add.htm
+++ b/templates/alelemconsumo_consulta_add.htm
@@ -485,14 +485,14 @@
 														<tr {$row_grid_1} >
 										
 
-{BEGIN cellblock_grid_c3}
+{BEGIN cellblock_grid_c10}
 <td
-	{$cell_grid_c3}
+	{$cell_grid_c10}
 	class=" r-ori-vert"
 	
 			data-single
 			
-	ocolspan="3"		data-cellId="grid_c3" data-pageid="{$pageid}"
+	ocolspan="3"		data-cellId="grid_c10" data-pageid="{$pageid}"
 		data-v-cell="6"
 		
 >
@@ -521,7 +521,301 @@
 {END ec_nomelemento_fieldblock}
 	
 								</td>
-			{END cellblock_grid_c3}
+			{END cellblock_grid_c10}
+								</tr>
+	 
+	 
+														<tr {$row_grid_2} >
+										
+
+{BEGIN cellblock_grid_c}
+<td
+	{$cell_grid_c}
+	class=" r-ori-vert"
+	
+			data-single
+				data-fullwidth
+		
+	ocolspan="3"		data-cellId="grid_c" data-pageid="{$pageid}" data-page="alelemconsumo_consulta_add"
+		data-v-cell="6"
+		
+>
+	<div edit-form-cell class="clearfix">
+				<span data-itemtype="text" data-itemid="text" {$item_text} data-pageid="{$pageid}" data-page="alelemconsumo_consulta_add" data-small > 
+	<p>Cuenta contable | Nuevos</p></span>
+	
+								</td>
+			{END cellblock_grid_c}
+								</tr>
+	 
+	 
+														<tr {$row_grid_3} >
+										
+
+{BEGIN cellblock_grid_c7}
+<td
+	{$cell_grid_c7}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c7" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN nicsp_cuentacostonew_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostonew}  r-vertical-field" 
+	data-signal-error-for="nicsp_cuentacostonew{$id}" {$required_attr_nicsp_cuentacostonew}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field1" {$item_integrated_edit_field1} data-pageid="{$pageid}" data-field="nicsp_cuentacostonew" data-fieldname="nicsp_cuentacostonew" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_nicsp_cuentacostonew}">
+		{BEGIN nicsp_cuentacostonew_label}{$label alelemconsumo_consulta nicsp_cuentacostonew }{END nicsp_cuentacostonew_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$nicsp_cuentacostonew_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="nicsp_cuentacostonew" {$tooltipAttr alelemconsumo_consulta nicsp_cuentacostonew } >
+		<div class="text-muted" >
+		{$tooltip alelemconsumo_consulta nicsp_cuentacostonew }		</div>
+	</div>
+</div>
+
+
+{END nicsp_cuentacostonew_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c7}
+			 
+																
+
+{BEGIN cellblock_grid_c8}
+<td
+	{$cell_grid_c8}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c8" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN nicsp_cuentacostonewc_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostonewc}  r-vertical-field" 
+	data-signal-error-for="nicsp_cuentacostonewc{$id}" {$required_attr_nicsp_cuentacostonewc}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field2" {$item_integrated_edit_field2} data-pageid="{$pageid}" data-field="nicsp_cuentacostonewc" data-fieldname="nicsp_cuentacostonewc" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_nicsp_cuentacostonewc}">
+		{BEGIN nicsp_cuentacostonewc_label}{$label alelemconsumo_consulta nicsp_cuentacostonewc }{END nicsp_cuentacostonewc_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$nicsp_cuentacostonewc_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="nicsp_cuentacostonewc" {$tooltipAttr alelemconsumo_consulta nicsp_cuentacostonewc } >
+		<div class="text-muted" >
+		{$tooltip alelemconsumo_consulta nicsp_cuentacostonewc }		</div>
+	</div>
+</div>
+
+
+{END nicsp_cuentacostonewc_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c8}
+			 
+																
+
+{BEGIN cellblock_grid_c9}
+<td
+	{$cell_grid_c9}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c9" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN nicsp_cuentacostonewn_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostonewn}  r-vertical-field" 
+	data-signal-error-for="nicsp_cuentacostonewn{$id}" {$required_attr_nicsp_cuentacostonewn}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field5" {$item_integrated_edit_field5} data-pageid="{$pageid}" data-field="nicsp_cuentacostonewn" data-fieldname="nicsp_cuentacostonewn" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_nicsp_cuentacostonewn}">
+		{BEGIN nicsp_cuentacostonewn_label}{$label alelemconsumo_consulta nicsp_cuentacostonewn }{END nicsp_cuentacostonewn_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$nicsp_cuentacostonewn_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="nicsp_cuentacostonewn" {$tooltipAttr alelemconsumo_consulta nicsp_cuentacostonewn } >
+		<div class="text-muted" >
+		{$tooltip alelemconsumo_consulta nicsp_cuentacostonewn }		</div>
+	</div>
+</div>
+
+
+{END nicsp_cuentacostonewn_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c9}
+								</tr>
+	 
+	 
+														<tr {$row_grid_4} >
+										
+
+{BEGIN cellblock_grid_c16}
+<td
+	{$cell_grid_c16}
+	class=" r-ori-vert"
+	
+			data-single
+				data-fullwidth
+		
+	ocolspan="3"		data-cellId="grid_c16" data-pageid="{$pageid}" data-page="alelemconsumo_consulta_add"
+		data-v-cell="6"
+		
+>
+	<div edit-form-cell class="clearfix">
+				<span data-itemtype="text" data-itemid="text1" {$item_text1} data-pageid="{$pageid}" data-page="alelemconsumo_consulta_add" data-small > 
+	<p>Cuenta contable | En servicio</p></span>
+	
+								</td>
+			{END cellblock_grid_c16}
+								</tr>
+	 
+	 
+														<tr {$row_grid_5} >
+										
+
+{BEGIN cellblock_grid_c11}
+<td
+	{$cell_grid_c11}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c11" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN nicsp_cuentacostoservicio_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostoservicio}  r-vertical-field" 
+	data-signal-error-for="nicsp_cuentacostoservicio{$id}" {$required_attr_nicsp_cuentacostoservicio}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field7" {$item_integrated_edit_field7} data-pageid="{$pageid}" data-field="nicsp_cuentacostoservicio" data-fieldname="nicsp_cuentacostoservicio" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_nicsp_cuentacostoservicio}">
+		{BEGIN nicsp_cuentacostoservicio_label}{$label alelemconsumo_consulta nicsp_cuentacostoservicio }{END nicsp_cuentacostoservicio_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$nicsp_cuentacostoservicio_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="nicsp_cuentacostoservicio" {$tooltipAttr alelemconsumo_consulta nicsp_cuentacostoservicio } >
+		<div class="text-muted" >
+		{$tooltip alelemconsumo_consulta nicsp_cuentacostoservicio }		</div>
+	</div>
+</div>
+
+
+{END nicsp_cuentacostoservicio_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c11}
+			 
+																
+
+{BEGIN cellblock_grid_c12}
+<td
+	{$cell_grid_c12}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c12" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN nicsp_cuentacostoservicioc_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostoservicioc}  r-vertical-field" 
+	data-signal-error-for="nicsp_cuentacostoservicioc{$id}" {$required_attr_nicsp_cuentacostoservicioc}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field8" {$item_integrated_edit_field8} data-pageid="{$pageid}" data-field="nicsp_cuentacostoservicioc" data-fieldname="nicsp_cuentacostoservicioc" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_nicsp_cuentacostoservicioc}">
+		{BEGIN nicsp_cuentacostoservicioc_label}{$label alelemconsumo_consulta nicsp_cuentacostoservicioc }{END nicsp_cuentacostoservicioc_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$nicsp_cuentacostoservicioc_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="nicsp_cuentacostoservicioc" {$tooltipAttr alelemconsumo_consulta nicsp_cuentacostoservicioc } >
+		<div class="text-muted" >
+		{$tooltip alelemconsumo_consulta nicsp_cuentacostoservicioc }		</div>
+	</div>
+</div>
+
+
+{END nicsp_cuentacostoservicioc_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c12}
+			 
+																
+
+{BEGIN cellblock_grid_c13}
+<td
+	{$cell_grid_c13}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c13" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN nicsp_cuentacostoservicion_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_nicsp_cuentacostoservicion}  r-vertical-field" 
+	data-signal-error-for="nicsp_cuentacostoservicion{$id}" {$required_attr_nicsp_cuentacostoservicion}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field9" {$item_integrated_edit_field9} data-pageid="{$pageid}" data-field="nicsp_cuentacostoservicion" data-fieldname="nicsp_cuentacostoservicion" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_nicsp_cuentacostoservicion}">
+		{BEGIN nicsp_cuentacostoservicion_label}{$label alelemconsumo_consulta nicsp_cuentacostoservicion }{END nicsp_cuentacostoservicion_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$nicsp_cuentacostoservicion_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="nicsp_cuentacostoservicion" {$tooltipAttr alelemconsumo_consulta nicsp_cuentacostoservicion } >
+		<div class="text-muted" >
+		{$tooltip alelemconsumo_consulta nicsp_cuentacostoservicion }		</div>
+	</div>
+</div>
+
+
+{END nicsp_cuentacostoservicion_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c13}
 								</tr>
 			</tbody></table>
 {END grid_block}
